# SMILES2XYZ

./: README.md  pyproject.toml
smiles2xyz/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py  test_init.py
